--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Texto animado con scroll y animación en links</title>
+  <title>Repositorio</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
