--- a/index.html
+++ b/index.html
@@ -150,13 +150,23 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div id="intro">
   <div class="texto">Welcome!!</div>
   <div class="autor">by Patricio Rebolledo</div>
-  <div class="repositorio">repository</div>  <!-- nuevo -->
-  <div class="repository-text">Repository</div> <!-- Nuevo texto fijo -->
+  <div class="repositorio">repository</div>
+  <div class="repository-text">Repository</div>
+
+  <!-- 🎧 Reproductor de Spotify -->
+  <div class="reproductor">
+    <iframe style="border-radius:12px"
+      src="https://open.spotify.com/embed/track/02wNtFxlr9dLmZXKT5TIF5?utm_source=generator"
+      width="300" height="80" frameborder="0"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy">
+    </iframe>
+  </div>
 </div>
-</div>
+
 
 
   <div id="contenido">
