--- a/index.html
+++ b/index.html
@@ -179,9 +179,20 @@
       <div class="item">
         Differential Equations Book:
         <a href="https://drive.google.com/uc?export=download&id=159sfZg2oAFg_uxk1ouuRA5e_nv-D4hh8" target="_blank" onclick="animarLink(event)">
-          📅 Download solved exercise book (PDF)
+          📅Download solved exercise book (PDF)
         </a>
       </div>
+
+    
+      <div class="item">
+  Thermodynamics Exercises:
+  <a href="https://drive.google.com/uc?export=download&id=1VlfuhpHy2xCRGx2ShZSw8VAy3v3Fmng8" 
+     target="_blank" 
+     onclick="animarLink(event)">
+    📅 Download solved thermodynamics exercises (PDF)
+  </a>
+</div>
+
 
       <div class="item">
         My Spotify:
