--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <a href="https://drive.google.com/uc?export=download&id=1VlfuhpHy2xCRGx2ShZSw8VAy3v3Fmng8" 
      target="_blank" 
      onclick="animarLink(event)">
-    📅 Download solved thermodynamics exercises (PDF)
+    📅 Download thermodynamics exercises (PDF)
   </a>
 </div>
 
