--- a/index.html
+++ b/index.html
@@ -175,6 +175,34 @@
       <div class="item">Repository of my data.</div>
       <div class="item">Each of my platforms of interest below 👇.</div>
 
+
+
+<div class="item">
+  Integral calculus exercises:
+  <a href="https://drive.google.com/uc?export=download&id=1VVrEcI9UTyl8O3Iw0JTdP9Day3VX86tA
+" 
+     target="_blank" 
+     onclick="animarLink(event)">
+    📅 Download Integral Calculus (PDF)
+  </a>
+</div>
+
+
+
+
+
+
+   <div class="item">
+  Thermodynamics Exercises:
+  <a href="" 
+     target="_blank" 
+     onclick="animarLink(event)">
+    📅 Download thermodynamics exercises (PDF)
+  </a>
+</div>
+
+
+
       <div class="item">Related content</div>
       <div class="item">
         Differential Equations Book:
@@ -184,14 +212,7 @@
       </div>
 
     
-      <div class="item">
-  Thermodynamics Exercises:
-  <a href="https://drive.google.com/uc?export=download&id=1VlfuhpHy2xCRGx2ShZSw8VAy3v3Fmng8" 
-     target="_blank" 
-     onclick="animarLink(event)">
-    📅 Download thermodynamics exercises (PDF)
-  </a>
-</div>
+    
 
 
       <div class="item">
